2002-06-24  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/font.h: Changed order of DiaFontWeight entries.  Sorry.
	* lib/font.c (dia_font_get_style): Style now linear and conversion
	simple. 

	* lib/widgets.c (dia_font_selector_set_styles): Fixed the style
	selector. 

2002-06-24  Cyrille Chepelov  <cyrille@chepelov.org>

	* plug-ins/dxf/dxf-import.c:
	using dia_font_new_from_style()

	Patch from Matthieu Sozeau  <mattam@netcourrier.com>:

	* objects/UML/class.[ch]: Added a comment field to class
	* objects/UML/uml.[ch]: Added a comment field to attributes,
	operations and parameters.
	* objects/UML/class_dialog.c: Added code for the new comment
	fields.
	* plug-ins/xslt/*.xsl: Added some code to handle comments.
	* plug-ins/xslt/xslt*.c: Clean up based on Cyrille comments.
	Added a $directory parameter for stylesheets so the output is 
	in the good place (not in the $PWD).

	(end of Patch)

	* AUTHORS: added contributors, updated maintainers. Removed the
	specific areas of action.

	* Patch from Andrew Ferrier <andrew@new-destiny.co.uk>, derived
	from a patch by Xing Wang <quixon@gnuchina.org>:

	* app/commands.c: help_about_callback now supports
	new-style GNOME about box as well as old GTK style. 
	code also tidied (Closes: #85726)

	(end of Patch)

	* app/commands.c: fixed the copyright (it's not all FSF), and
	maintainers. Synced contributors list with AUTHORS.
		
2002-06-24  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/message.c: More work on repeating messages, now with
	togglable view.

2002-06-24  Hans Breuer  <hans@breuer.org>

	* lib/widget.c : some more bits in place, at least
	it does something useful instead of crashing. Much
	better - but not all ok :-)

2002-06-23  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* lib/message.c (gtk_message_internal): First stab at repeating
	message dialog.

2002-06-23  Cyrille Chepelov  <cyrille@chepelov.org>

	* objects/FS/*.c:
	* objects/GRAFCET/*.c:
	* objects/SADT/*.c: